# ellex-lang

./: .gitignore  DEPLOYMENT.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  ROADMAP.md
.github/: dependabot.yml  repomix-output.md
.github/workflows/: README.md  benchmark.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
benchmarks/: README.md  docker-compose.yml
benchmarks/datasets/: datasets_config.json
benchmarks/datasets/synthetic/medium_synthetic/: package.json
benchmarks/datasets/synthetic/medium_synthetic/src/: main.ts  module_0000.ts  module_0001.ts  module_0002.ts  module_0003.ts  module_0004.ts  module_0005.ts  module_0006.ts  module_0007.ts  module_0008.ts  module_0009.ts  module_0010.ts  module_0011.ts  module_0012.ts  module_0013.ts  module_0014.ts  module_0015.ts  module_0016.ts  module_0017.ts  module_0018.ts  module_0019.ts  module_0020.ts  module_0021.ts  module_0022.ts  module_0023.ts  module_0024.ts  module_0025.ts  module_0026.ts  module_0027.ts  module_0028.ts  module_0029.ts  module_0030.ts  module_0031.ts  module_0032.ts  module_0033.ts  module_0034.ts  module_0035.ts  module_0036.ts  module_0037.ts  module_0038.ts  (+61 more)
benchmarks/datasets/synthetic/small_synthetic/: package.json  tsconfig.json
benchmarks/datasets/synthetic/small_synthetic/src/: main.ts  module_0000.ts  module_0001.ts  module_0002.ts  module_0003.ts  module_0004.ts  module_0005.ts  module_0006.ts  module_0007.ts  module_0008.ts  module_0009.ts
benchmarks/docker/ellex/: Dockerfile
benchmarks/docker/swc/: Dockerfile  package.json  swc.config.js
benchmarks/docker/tsc/: Dockerfile  package.json  tsconfig.json
benchmarks/reports/: benchmark_summary.json  final_benchmark_report.md
benchmarks/scripts/: analyze_results.py  benchmark_runner.py  dataset_manager.py  direct_benchmark.py  run_benchmarks.sh  simple_analysis.py
crates/: Cargo.toml  simple_no_interpolation.el  simple_no_interpolation.js  simple_test.el
crates/ellex_ai/: Cargo.toml
crates/ellex_ai/src/: lib.rs
crates/ellex_api/: Cargo.toml
crates/ellex_api/src/: main.rs
crates/ellex_cli/: Cargo.toml
crates/ellex_cli/src/: lib.rs  main.rs  main_old.rs  tui.rs
crates/ellex_core/: Cargo.toml
crates/ellex_core/examples/: inline_caching_demo.rs  minielixir_integration_demo.rs
crates/ellex_core/src/: benchmarks.rs  cached_ast.rs  ellex_minielixir_bridge.rs  lib.rs  minielixir.rs  minielixir_cached_runtime.rs  minielixir_validator.rs  optimized_runtime.rs  passes.rs  runtime.rs  safety.rs  sequin_minielixir.rs  turtle.rs  values.rs
crates/ellex_core/tests/: config_safety_tests.rs  integration_tests.rs
crates/ellex_parser/: Cargo.toml
crates/ellex_parser/src/: ellex.pest  lib.rs
crates/ellex_repl/: Cargo.toml
crates/ellex_repl/src/: lib.rs
crates/ellex_transpiler/: Cargo.toml
crates/ellex_transpiler/benches/: transpiler_bench.rs
crates/ellex_transpiler/src/: ast.rs  codegen.rs  js_parser.rs  js_transpiler.rs  lib.rs  optimizer.rs  type_inference.rs  wasm_compiler.rs
crates/ellex_transpiler/tests/: integration_tests.rs
crates/ellex_web/: Cargo.toml
crates/ellex_web/src/: lib.rs
crates/ellix_apic/: Cargo.toml
docs/: README.md  api-reference.md  enhanced-grammar-proposal.md  getting-started.md  language-specification.md  repl-api-guide.md
docs/diagrams/: ellex-architecture.d2  ellex-grammar.d2  ellex-learning-journey.d2
docs/features/: basic-commands.feature  control-flow.feature  functions.feature  modal-programming.feature  repl-commands.feature
docs/marketing/: ellex-overview.md
elixir_backend/: mix.exs
elixir_backend/_build/dev/lib/castore/.mix/: compile.elixir
elixir_backend/_build/dev/lib/ellex/.mix/: compile.app_cache  compile.elixir  compile.protocols
elixir_backend/_build/dev/lib/ellex/ebin/: ellex.app
elixir_backend/_build/dev/lib/jason/.mix/: compile.elixir
elixir_backend/_build/dev/lib/mime/.mix/: compile.elixir
elixir_backend/_build/dev/lib/phoenix/.mix/: compile.elixir
elixir_backend/_build/dev/lib/phoenix_html/.mix/: compile.elixir
elixir_backend/_build/dev/lib/phoenix_live_view/.mix/: compile.elixir
elixir_backend/_build/dev/lib/phoenix_pubsub/.mix/: compile.elixir
elixir_backend/_build/dev/lib/phoenix_template/.mix/: compile.elixir
elixir_backend/_build/dev/lib/plug/.mix/: compile.elixir  compile.erlang
elixir_backend/_build/dev/lib/plug_crypto/.mix/: compile.elixir
elixir_backend/_build/dev/lib/rustler/.mix/: compile.elixir
elixir_backend/_build/dev/lib/rustler/ebin/: rustler.app
elixir_backend/_build/dev/lib/toml/.mix/: compile.elixir
elixir_backend/_build/dev/lib/websock/.mix/: compile.elixir
elixir_backend/_build/dev/lib/websock_adapter/.mix/: compile.elixir
elixir_backend/lib/: ellex.ex
elixir_backend/lib/ellex/: application.ex  mini_elixir.ex  nif.ex  safety_monitor.ex  turtle_graphics.ex
elixir_backend/lib/ellex/mini_elixir/: natural_language_transformer.ex  validator.ex
elixir_backend/lib/ellex/mini_elixir/validator/: pattern_checker.ex
ellex_frontend/: package.json
ellex_frontend/src/: App.svelte
examples/: complete_demo.el  configuration_demo.el  execution_engine_demo.el  hello_world.el  hello_world.js  hello_world_simple.el  integration_test.el  safety_demo.el  simple_math.js
examples/advanced/: modal_programming.el
examples/beginner/: greetings.el  greetings.js  hello_world.el  numbers.el  numbers.js
examples/games/: guessing_game.el  story_adventure.el
playground/: index.html
scripts/: setup.sh
tests/: ellex_parser.rs
