[package]
name = "ellex_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ellex cli component - the natural language programming environment"

[[bin]]
name = "el"
path = "src/main.rs"

[dependencies]
ellex_core = { path = "../ellex_core" }
ellex_parser = { path = "../ellex_parser" }
ellex_transpiler = { path = "../ellex_transpiler", default-features = false }
ellex_repl = { path = "../ellex_repl" }
serde.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4"
