[package]
name = "ellex_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime for the Ellex programming language"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
# inkwell = { version = "0.5.0", features = [
#   "llvm18-0",
# ], optional = true } # Disabled for MiniElixir integration

[features]
default = []
# llvm = ["inkwell"] # Disabled
